[gd_scene load_steps=4 format=3 uid="uid://dpfhbhns6moty"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_nb6d7"]
[ext_resource type="Script" path="res://scripts/SettingsMenu.gd" id="2_qbehs"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_p6l6r"]
blend_mode = 3

[node name="Main" type="Node"]
script = ExtResource("1_nb6d7")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuBackground" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.207843, 0.203922, 1)

[node name="ButtonBox" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="play" type="Button" parent="MainMenu/ButtonBox"]
layout_mode = 2
text = "Play"

[node name="settings" type="Button" parent="MainMenu/ButtonBox"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu/ButtonBox"]
layout_mode = 2
text = "Quit"

[node name="sceneHandler" type="Node3D" parent="."]

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseBackground" type="ColorRect" parent="PauseMenu"]
material = SubResource("CanvasItemMaterial_p6l6r")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.294118, 0.364706, 1)

[node name="ButtonBox" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="returnToGame" type="Button" parent="PauseMenu/ButtonBox"]
layout_mode = 2
text = "Return to Game"

[node name="Settings" type="Button" parent="PauseMenu/ButtonBox"]
layout_mode = 2
text = "Settings"

[node name="QuitToMainMenu" type="Button" parent="PauseMenu/ButtonBox"]
layout_mode = 2
text = "Quit To Main Menu"

[node name="Settings" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qbehs")

[node name="SettingsBackgroundBoarder" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SettingsBackground" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.176471, 0.168627, 1)

[node name="CategoryHandler" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Level1" type="VBoxContainer" parent="Settings/CategoryHandler"]
layout_mode = 2
alignment = 1

[node name="MouseSensLabel" type="Label" parent="Settings/CategoryHandler/Level1"]
layout_mode = 2
text = "MouseSensitivity"

[node name="MouseSensitivity" type="HSlider" parent="Settings/CategoryHandler/Level1"]
layout_mode = 2
min_value = 0.25
max_value = 5.0
step = 0.1
value = 2.45

[node name="MouseSensDisplay" type="Label" parent="Settings/CategoryHandler/Level1"]
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="SaveAndExit" type="Button" parent="Settings"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Save and Exit"

[connection signal="button_down" from="MainMenu/ButtonBox/play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="MainMenu/ButtonBox/settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="MainMenu/ButtonBox/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="PauseMenu/ButtonBox/returnToGame" to="." method="_on_return_to_game_button_down"]
[connection signal="button_down" from="PauseMenu/ButtonBox/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="PauseMenu/ButtonBox/QuitToMainMenu" to="." method="_on_quit_to_main_menu_button_down"]
[connection signal="drag_ended" from="Settings/CategoryHandler/Level1/MouseSensitivity" to="Settings" method="_on_mouse_sensitivity_drag_ended"]
[connection signal="button_down" from="Settings/SaveAndExit" to="Settings" method="_on_save_and_exit_button_down"]
